# envytools

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Dockerfile  IMPORT-TODO  INSNS  Makefile  OPCODES  README  README.rst  TODO  bftool  copyright.xml  coredis.c  coredis.h  ctxd-back.c  ctxdis.c  dedma.c  dedma.h  dedma_back.c  demmio.c  dis.h  envyas.c  envyas.h  envydis.c  envylex.l  envyparse.y  envyprint.c  examples.xml  expand.c  fcd-back.c  fcdis.c  fifo-dma-pusher.txt  fifo-puller.txt  fifo.txt  fuc-arith.txt  fuc-branch.txt  fuc-data.txt  fuc-intr.txt  (+123 more)
cgen/: .gitignore  CMakeLists.txt
cupti_trace/: .gitignore  CMakeLists.txt  cupti_make_report.py  cupti_trace.c  cupti_trace_path.h.in  decode_utils.c  decode_utils.h  lookup_trace.c
demmt/: .gitignore  CMakeLists.txt  buffer.c  buffer.h  buffer_decode.c  buffer_decode.h  config.c  config.h  decode_utils.c  decode_utils.h  demmt.h  drm.c  drm.h  fglrx.c  fglrx.h  fglrx_ioctl.h  log.h  macro.c  macro.h  main.c  mmt_bin2dedma.c  mmt_bin2dedma.h  mmt_bin2dedma_nvidia.c  mmt_bin_decode.c  mmt_bin_decode.h  mmt_bin_decode_nvidia.c  mmt_bin_decode_nvidia.h  nvrm.c  nvrm.h  nvrm_create.h  nvrm_decode.h  nvrm_decode_ioctl.c  nvrm_decode_mthd.c  nvrm_decode_query.c  nvrm_ioctl.h  nvrm_mthd.h  nvrm_object.xml.h  nvrm_query.h  object.h  object_g80_2d.c  (+17 more)
demmt/scripts/: README  compare-traces-interactive.sh  compare-traces.sh  find-trace.sh  grep-trace.sh  loop-xterm.sh
demmt/scripts/mmiotrace/: mmiotrace_start.sh  mmiotrace_stop.sh  mmt-app-demmt-mmiotrace.sh
docs/: conf.py  conventions.rst  envy.py  glossary.txt  index.rst
easm/: .gitignore  CMakeLists.txt  easm.c  easm_lex.l  easm_parse.y  easm_print.c  easm_xfrm.c
envydis/: .gitignore  CMakeLists.txt  README  convert.c  core-as.c  core-dis.c  core.c  ctx.c  dis-intern.h  easm.c  easm_parse.y  easm_print.c  ed2_misc.c  ed2_parse.c  ed2_parse.h  ed2a_funcs.c  ed2a_lex.l  ed2a_parse.y  ed2a_print.c  ed2acat.c  ed2i_funcs.c  ed2i_lex.l  ed2i_parse.y  ed2i_pre.c  ed2i_pre.h  ed2ishow.c  ed2itest.c  ed2s_hash.c  ed2s_symtab.c  ed2v_funcs.c  envyas.c  envyas.h  envyas_lex.l  envyas_parse.y  envydis.c  envyparse.y  envyprint.c  envysched.c  falcon.c  fuc.c  (+24 more)
envydis/test/: CMakeLists.txt  fuc_smoke
hwdocs/: check.py  chipsets.rst  chipsets.txt  classes.txt  conf.py  envy.py  fifo-dma-pusher.txt  fifo-pio.txt  fifo-puller.txt  fifo.txt  fuc-arith.txt  fuc-branch.txt  fuc-intr.txt  fuc-io.txt  fuc-isa.txt  fuc-timer.txt  fuc-xfer.txt  fuc.txt  glossary.txt  gpu.rst  hwsq.txt  index.rst  index.txt  intro.rst  intro.txt  mmio.rst  mmio.txt  nv01-blit.txt  nv01-graph.txt  nv01-ifm.txt  nv01-paudio.rst  nv01-paudio.txt  nv01-pdma.txt  nv01-peeprom.txt  nv01-pfifo.txt  nv01-tex.txt  nv01-vram.txt  nv10-pcounter.txt  nv40-pcounter.txt  nv43-therm.txt  (+36 more)
hwtest/: .gitignore  CMakeLists.txt  common.c  common.cc  g80_atom32.c  g80_atom32.cc  g80_atom64.c  g80_atom64.cc  g80_fp.c  g80_fp.cc  g80_fp64.c  g80_fp64.cc  g80_gr.c  g80_gr.cc  g80_gr.h  g80_int.c  g80_int.cc  g80_sfu.c  g80_sfu.cc  hwtest.c  hwtest.cc  hwtest.h  mpeg_crypt.c  mpeg_crypt.cc  nv01_pgraph.c  nv01_pgraph.cc  nv03_pgraph.cc  nv04_pgraph.cc  nv10_tile.c  nv10_tile.cc  nv20_tile.c  nv50_ptherm.c  nv50_ptherm.cc  nv84_ptherm.c  nv84_ptherm.cc  old.h  pfifo.cc  pgraph.cc  pgraph.h  pgraph_class.h  (+40 more)
include/: codesched.h  colors.h  dis.h  easm.h  ed2_misc.h  ed2a.h  ed2i.h  ed2s.h  ed2v.h  h261.h  h262.h  h264.h  mask.h  nouveau_pms.h  nva.h  nvamemtiming.h  nvhw.h  pgraph.h  rnn.h  rnndec.h  symtab.h  util.h  var.h  vstream.h  yy.h
isadb/: ctx  fuc  hwsq  nv50  nvc0  vuc  x86  xtensa
nva/: .gitignore  CMakeLists.txt  README  evotiming.c  geist.xt  nv01dump.c  nv01play.c  nv01post.c  nv03post.c  nva.c  nvacounter.c  nvactxinfo.c  nvadownload.c  nvaevo.c  nvafakebios.c  nvafill.c  nvaforcetemp.c  nvafucstart.c  nvafuzz.c  nvagetbios.c  nvagetpmu.c  nvahammer.c  nvalist.c  nvamemtiming.c  nvammiotracereplay.c  nvapeek.c  nvapeek8.c  nvapeeki.c  nvapeekstat.c  nvapms.c  nvapoke.c  nvapoke8.c  nvapy.pyx  nvascan.c  nvaspyi2c.c  nvastrscan.c  nvatiming.c  nvaupload.c  nvavucstart.c  nvawatch.c  (+10 more)
nva/libXNVCtrl/: NVCtrl.c  NVCtrl.h  NVCtrlLib.h  nv_control.h
nvbios/: .gitignore  CMakeLists.txt  D.c  L.c  T.c  bios.c  bios.h  bit.c  conn.c  d.c  dacload.c  dcb.c  dunk.c  extdev.c  gpio.c  i2c.c  i2cscript.c  info.c  iunk.c  mem.c  mux.c  nvbios.c  p.c  power.c  print.c
nvhw/: .gitignore  CMakeLists.txt  chipset.c  comp.c  fp.c  mpeg_crypt.c  pgraph.c  pgraph_celsius.c  pgraph_celsius_xfrm.c  pgraph_class.c  pgraph_d3d_nv3.c  pgraph_grobj.c  pgraph_idx.c  pgraph_kelvin.c  pgraph_xy.c  pgraph_xy3.c  pgraph_xy4.c  sfu.c  sfu_tab.c  tile.c  vp1.c  xf.c
ptxgen/: Makefile  cuobjfuzz.c  lamedump  ptxgen  unique  unks.txt
rnn/: .gitignore  CMakeLists.txt  colors.py  dedma.c  dedma.h  dedma_back.c  dedma_cache.c  demmio.c  demmt.c  demmt.h  demmt_drm.c  demmt_drm.h  demmt_macro.c  demmt_macro.h  demmt_nvrm.c  demmt_nvrm.h  demmt_objects.c  demmt_objects.h  demmt_pushbuf.c  demmt_pushbuf.h  demmt_region.c  demmt_region.h  depushbuf.c  expand.c  fp.py  headergen.c  headergen.py  lookup.c  lookup.py  mmt_bin2dedma.c  mmt_bin2dedma.h  mmt_bin2dedma_nvidia.c  mmt_bin2text.c  mmt_bin2text.h  mmt_bin2text_nvidia.c  mmt_bin_decode.c  mmt_bin_decode.h  mmt_bin_decode_nvidia.c  mmt_bin_decode_nvidia.h  nvrm_ioctl.h  (+16 more)
rnndb/: adreno.xml  blob_nvc0_pcopy.xml  copyright.xml  falcon.xml  falcon_crypt.xml  g80_defs.xml  g84_punk089.xml  gf100_pcounter.xml  msm.xml  nv01_2d.xml  nv01_misc.xml  (+112 more)
util/: .gitignore  CMakeLists.txt  aprintf.c  astr.c  colors.c  file.c  hash.c  mask.c  path.c  symtab.c  vardata.c  varinfo.c  varselect.c  yy.c
vdpow/: .gitignore  CMakeLists.txt  dumpstruct.c  mmt_ufw.c  vdpow.c
vstream/: .gitignore  CMakeLists.txt  bitstream.c  deh261.c  deh262.c  deh264.c  h261.c  h262.c  h262_print.c  h262_slice.c  h264.c  h264_cabac.c  h264_cabac.h  h264_cavlc.c  h264_print.c  h264_residual.c  h264_se.c  h264_slice.c  predtest.c  test264.c  vdpow.c  vstest.c
vstream/test/: .gitignore  CMakeLists.txt  predtest.c  test264.c
(+817 files in other folders)
